# GmockTest

./: .gitignore  CMakeLists.txt  main.cpp
